[package]
name = "mnt-gate-migration-safety"
version = "0.1.0"
description = "CI gate: rejects unsafe schema changes against audited tables and audit_events immutability."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mnt-gate-migration-safety"
path = "src/main.rs"

[lib]
name = "mnt_gate_migration_safety"
path = "src/lib.rs"

[lints]
workspace = true
