[package]
name = "mnt-gate-pii-no-logs"
version = "0.1.0"
description = "CI gate: rejects direct PII literals in tracing/log macro call sites."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mnt-gate-pii-no-logs"
path = "src/main.rs"

[lib]
name = "mnt_gate_pii_no_logs"
path = "src/lib.rs"

[lints]
workspace = true
