[package]
name = "mnt-gate-vendor-lockin"
version = "0.1.0"
description = "CI gate: verifies managed-cloud dependency seams have vendor lock-in phase-out registry entries."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mnt-gate-vendor-lockin"
path = "src/main.rs"

[lib]
name = "mnt_gate_vendor_lockin"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
