[package]
name = "mnt-action-inbox-application"
version = "0.1.0"
description = "Source-neutral action inbox DTOs, source port, cursor, and merge use case."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-kernel-core = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
