[package]
name = "mnt-attendance-application"
version = "0.1.0"
description = "Attendance application contracts and policy checks."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-attendance-domain = { path = "../domain" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
