[package]
name = "mnt-attendance-rest"
version = "0.1.0"
description = "Authenticated REST boundary for attendance operations."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
mnt-attendance-adapter-postgres = { path = "../adapter-postgres" }
mnt-attendance-application = { path = "../application" }
mnt-attendance-domain = { path = "../domain" }
mnt-kernel-core = { workspace = true }
mnt-platform-auth = { workspace = true }
mnt-platform-authz = { workspace = true }
mnt-platform-request-context = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
