[package]
name = "mnt-benefit-adapter-postgres"
version = "0.1.0"
description = "Postgres adapter for tenant-scoped benefit-catalog storage and mutations."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-benefit-application = { workspace = true }
mnt-benefit-domain = { workspace = true }
mnt-kernel-core = { workspace = true }
mnt-platform-db = { workspace = true }
mnt-platform-request-context = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
mnt-platform-test-support = { workspace = true }
