[package]
name = "mnt-benefit-application"
version = "0.1.0"
description = "Benefit-catalog application DTOs, commands, and audit builders."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-benefit-domain = { workspace = true }
mnt-kernel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
