[package]
name = "mnt-benefit-domain"
version = "0.1.0"
description = "Pure benefit-catalog domain invariants for legal/extra benefits."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-kernel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
