[package]
name = "mnt-benefit-rest"
version = "0.1.0"
description = "REST API for tenant-scoped benefit catalog rows."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
mnt-benefit-adapter-postgres = { workspace = true }
mnt-benefit-application = { workspace = true }
mnt-benefit-domain = { workspace = true }
mnt-kernel-core = { workspace = true }
mnt-platform-auth = { path = "../../platform/auth" }
mnt-platform-authz = { path = "../../platform/authz" }
mnt-platform-request-context = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
