[package]
name = "mnt-comms-adapter-imap"
version = "0.1.0"
description = "Inbound IMAP adapter for webmail (B-mail-3): AsyncImapClient (async-imap over tokio-rustls, single rustls 0.23 stack), the resolve-once/pin-IP SSRF guard for the IMAP host, and the inbound MIME parse (mail-parser) into the application's FetchedMessage. ONLY crate where async-imap/mail-parser appear."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-comms-application = { workspace = true }
mnt-comms-domain = { workspace = true }
mnt-kernel-core = { workspace = true }
async-imap = { workspace = true }
mail-parser = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "time"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
hickory-resolver = { workspace = true }
ipnet = { workspace = true }
futures = { workspace = true }
secrecy = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
