[package]
name = "mnt-comms-adapter-mox"
version = "0.1.0"
description = "mox mail-server transport adapter for webmail: outbound send via the mox webapi (POST /webapi/v0/Send, HTTP Basic auth) and inbound-delivery webhook payload parsing (mox `Incoming`) into the mail domain's FetchedMessage."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-comms-application = { workspace = true }
mnt-comms-domain = { workspace = true }
reqwest = { workspace = true, features = ["form"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mnt-kernel-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util"] }

[lints]
workspace = true
