[package]
name = "mnt-comms-adapter-smtp"
version = "0.1.0"
description = "Outbound SMTP adapter for webmail: SSRF host guard (hickory-resolver + ipnet, resolve-once/pin-IP, deny RFC1918/loopback/link-local/ULA/metadata, mail-port allowlist), TLS-enforced lettre transport, MIME builder for send/reply/forward."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-comms-application = { workspace = true }
mnt-comms-domain = { workspace = true }
lettre = { workspace = true }
hickory-resolver = { workspace = true }
ipnet = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mnt-kernel-core = { workspace = true }
secrecy = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
