[package]
name = "mnt-comms-credential-cipher"
version = "0.1.0"
description = "Envelope AEAD (XChaCha20Poly1305) for webmail SMTP/IMAP credentials at rest: per-row DEK wrapped by a master KEK, AAD-bound to row identity. Ciphertext-only, never logs secrets."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mnt-kernel-core = { workspace = true }
thiserror = { workspace = true }
chacha20poly1305 = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
